<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:layout_below="@+id/button8"
        android:layout_marginTop="24dp"
        android:text="@string/button9" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11"
        android:layout_below="@+id/button9"
        android:layout_marginTop="18dp"
        android:text="@string/button10" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button12"
        android:layout_alignStart="@+id/button12"
        android:layout_below="@+id/button10"
        android:layout_marginTop="30dp"
        android:text="@string/button11" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/button12" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button12"
        android:layout_alignStart="@+id/button12"
        android:layout_below="@+id/button12"
        android:layout_marginTop="15dp"
        android:text="@string/button13" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button13"
        android:layout_marginBottom="11dp"
        android:text="@string/button14" />

</RelativeLayout>
