<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="46dp"
        android:text="@string/textView7" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="47dp"
        android:text="@string/textView8" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="65dp"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:text="@string/button3" />
</RelativeLayout>
