<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/textView21" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/textView22"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView25"
        android:layout_toEndOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView23"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView26"
        android:layout_toEndOf="@+id/textView26"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/textView24"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:layout_below="@+id/textView25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp">

        <RelativeLayout
            android:layout_width="422dp"
            android:layout_height="78dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView29"
                android:layout_marginLeft="33dp"
                android:layout_marginStart="33dp"
                android:layout_toEndOf="@+id/textView29"
                android:layout_toRightOf="@+id/textView29"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView30"
                android:layout_marginLeft="31dp"
                android:layout_marginStart="31dp"
                android:layout_toEndOf="@+id/textView30"
                android:layout_toRightOf="@+id/textView30"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView31"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="TextView" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
